--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -1,11 +1,11 @@
 
 body {
-    color: black;
+    background-color: #1c1f22;
 }
 .navigation-wrapper > .nav-link > .nav-link-left img{
     height: 100px;
-    padding-right: 50px;
-    color: white;
+    padding-right: 40px;
+    color: black;
 }
  
 .navigation-wrapper > .nav-link > .nav-link-left {
@@ -16,10 +16,24 @@ body {
 .navigation-wrapper > .nav-link > .nav-link-left a {
     display: flex;
     align-items: center;
-    margin-left: 10px;
+    margin-left: 20px;
     grid-template-rows: 200px;
+    grid-row-start: center;
     text-decoration: none;
     color: white;
+    font-weight: 200;
+}
 
+.navigation-wrapper > .nav-link > .nav-link-right {
+    display: flex;
+    margin-left: 10px;
+    text-decoration: none;
+    color: white;
+    align-items: flex-end;
+
+}
+
+.footer-wrapper > .footer h1{
+align-content: stretch;
 }
 
