worked on styles

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -1,39 +1,111 @@
 
-body {
-    background-color: #1c1f22;
+.navigation-wrapper > .nav-link {
+    display: flex;
+    background-color: black;
 }
+
+
 .navigation-wrapper > .nav-link > .nav-link-left img{
     height: 100px;
     padding-right: 40px;
-    color: black;
+    filter: invert(100%);
 }
+
  
 .navigation-wrapper > .nav-link > .nav-link-left {
     display: flex;
     align-items: center;
+    background-color: black;
+    columns: 1;
 }
 
 .navigation-wrapper > .nav-link > .nav-link-left a {
     display: flex;
     align-items: center;
-    margin-left: 20px;
+    margin-left: 15px;
     grid-template-rows: 200px;
     grid-row-start: center;
     text-decoration: none;
     color: white;
-    font-weight: 200;
+    font-weight: 500;
+    font-size: 20px;
+    font-family: sans-serif;
+}
+
+.navigation-wrapper > .nav-link > .nav-link-left h1 {
+color: yellow;
+font-family: sans-serif;
+font-weight: none;
+font-size: 25px;
+}
+
+.navigation-wrapper > .nav-link > .nav-link-left > .drop-down {
+    color: #d4d4d4;
+    padding-left: 20px;
+    font-size: 17px;
+}
+
+.navigation-wrapper > .nav-link > .nav-link-left > .drop-down > .icon{
+    color: #d4d4d4;
+    padding-left: 30px;
+    filter: invert(100%);
 }
 
 .navigation-wrapper > .nav-link > .nav-link-right {
     display: flex;
     margin-left: 10px;
     text-decoration: none;
+    background-color: black;
+    justify-content: space-between;
+}
+
+.navigation-wrapper > .nav-link > .nav-link-right button {
     color: white;
+    background-color: #585958;
+    height: 80px;
+    width: 110px;
+    border: none;
+    font-size: 20px;
+    border-radius: 0.5px;
+}
+
+.home-page-content-wrapper > .home-page-content > .signup-btn{
+    height: 70px;
+    width: 250px;
+    background-color: #3ad869;
+    border-radius: 4px;
+    font-size: 25px;
+    font-weight: 900px;
+    border: none;
+}
+
+.home-page-content-wrapper > .home-page-content {
+    color: white;
+    background-color: #393a38;
+}
+
+.home-page-content-wrapper > .home-page-content h2{
+    color: #d4d4d4;
+    background-color: #393a38;
+}
+
+.home-page-content-wrapper > .home-page-content > .learn-more-btn{
+    height: 60px;
+    width: 160px;
+    background-color: black;
+    color: white;
+    border-radius: 3px;
+    font-size: 25px;
+    font-weight: 900px;
+    border: none;
+}
+
+.footer-wrapper > .footer {
+    display: flex;
     align-items: flex-end;
-
+    font-size: 13px;
+    padding-left: 35px;
+    background-color: #616360;
+    color: white;
+    flex-direction: row;
 }
-
-.footer-wrapper > .footer h1{
-align-content: stretch;
-}
-
