--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -1,203 +1,50 @@
-
-.navigation-wrapper > .nav-link {
-    display: flex;
-    align-items: center;
-    background-color: black;
-    justify-content: space-evenly;
+body{
+    margin: 0px;
 }
 
-
-.navigation-wrapper > .nav-link > .nav-link-left img{
-    height: 100px;
-    padding-right: 40px;
-    filter: invert(100%);
-}
-
- 
 .navigation-wrapper > .nav-link > .nav-link-left {
     display: flex;
-    align-items: center;
-    background-color: black;
-    grid-column: 2;
-}
-
-.navigation-wrapper > .nav-link > .nav-link-left a {
-    display: flex;
-    align-items: center;
-    margin-left: 15px;
-    grid-template-rows: 200px;
-    grid-row-start: center;
-    text-decoration: none;
-    color: white;
-    font-weight: 500;
-    font-size: 20px;
-    font-family: sans-serif;
-    grid-template-rows: 2;
-
-}
-
-.navigation-wrapper > .nav-link > .nav-link-left h1 {
-color: #fce478;
-font-family: sans-serif;
-font-weight: none;
-font-size: 25px;
-display: flex;
-align-items: flex-start;
-flex-direction: column;
-columns: 1;
-}
-
-.navigation-wrapper > .nav-link > .nav-link-left > .drop-down {
-    color: #d4d4d4;
-    padding-left: 20px;
-    font-size: 17px;
-}
-
-.navigation-wrapper > .nav-link > .nav-link-left > .drop-down i {
-    font-size: 30px;
-    display: flex;
-    align-content: center;
-    justify-content: space-around;
-}
-
-.navigation-wrapper > .nav-link > .nav-link-right {
-    display: flex;
-    margin-left: 10px;
-    text-decoration: none;
     background-color: black;
     justify-content: space-evenly;
+    align-items: flex-end;
+    /* align-items: center; */
+
 }
 
-.navigation-wrapper > .nav-link > .nav-link-right i {
-    color: #d4d4d4;
-    font-size: 30px;
+.navigation-wrapper > .nav-link > .nav-link-left img {
+    filter: invert(100%);
+    height: 85px;
+    width: 120px;
+    margin: 0px;
+}
+
+.navigation-wrapper > .nav-link > .nav-link-left > .explore {
     display: flex;
-    align-content: center;
-    justify-content: space-around;
-    text-decoration: none;
-}
-
-.navigation-wrapper > .nav-link > .nav-link-right button {
-    color: white;
-    background-color: #585958;
-    height: 60px;
-    width: 140px;
-    border: none;
-    font-size: 20px;
-    border-radius: 2px;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-
-.navigation-wrapper > .nav-link > .nav-link-right > .button > .log-In{
-    color: white;
-    background-color: #585958;
-    height: 60px;
-    width: 90px;
-    border: none;
-    font-size: 20px;
-    border-radius: 2px;
-    display: grid;
-    justify-content: space-between;
-    padding-left: 200px;
-}
-
-.navigation-wrapper > .nav-link > .nav-link-right > .button > .sign-up{
-    color: white;
-    background-color: #585958;
-    height: 60px;
-    width: 90px;
-    border: none;
-    font-size: 20px;
-    border-radius: 2px;
-    display: grid;
-    justify-content: space-between;
-}
-
-.navigation-wrapper > .nav-link > .nav-link-right > .fa-angle-down {
-    color: limegreen;
-    }
-    
-.navigation-wrapper > .nav-link > .nav-link-right > .fa-search {
-    color: grey;
-    font-size: 60px;
-    }
-    
-.navigation-wrapper > .nav-link > .nav-link-right >  a {
-    text-decoration: none;
-    }
-
-    .home-page-content-wrapper {
-        display: flex;
-        align-content: stretch;
-    }
-
-.home-page-content-wrapper > .home-page-content {
-    color: white;
-    background-color: #393a38;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: stretch;
-    justify-content: center;
-    align-content: space-around;
-    border-spacing: 20px;
-}
-
-
-.home-page-content-wrapper > .home-page-content h1{
-    color: #d4d4d4;
-    background-color: #393a38;
-    font-size: 35px;
-    display: flex;
-    justify-items: stretch;
-    align-items: stretch;
-    align-self: start;
-}
-
-
-
-.home-page-content-wrapper > .home-page-content h2{
-    color: #d4d4d4;
-    background-color: #393a38;
-    font-size: 20px;
-    display: flex;
-    align-content: flex-start;
-}
-
-
-.home-page-content-wrapper > .home-page-content > .signup-btn {
-    height: 70px;
-    width: 250px;
-    background-color: #3ad869;
-    border-radius: 4px;
-    font-size: 25px;
-    font-weight: 900px;
-    border: none;
-    outline: none;
-    transition: 0.3s
-}
-
-.home-page-content-wrapper > .home-page-content > .learn-more-btn{
-    height: 60px;
-    width: 170px;
-    background-color: black;
-    color: white;
-    border-radius: 3px;
-    font-size: 25px;
-    font-weight: 900px;
-    border: none;
-    outline: none;
-    transition: 0.3s
-}
-
-.footer-wrapper > .footer {
-    display: flex;
+    color: yellow;
     font-size: 13px;
-    padding-left: 35px;
-    background-color: #3c3f3a;
+    align-content: center;
+}
+
+.navigation-wrapper > .nav-link > .nav-link-left > .pen a {
     color: white;
-    align-content: stretch;
-    justify-content: space-between; 
-    box-decoration-break: 20px, solid , white;
+    text-decoration: none;
+    font-size: 16px;
+}
+
+.navigation-wrapper > .nav-link > .nav-link-left > .project a {
+    color: white;
+    text-decoration: none;
+    font-size: 15px;
+}
+
+.navigation-wrapper > .nav-link > .nav-link-left > .collections a {
+    color: white;
+    text-decoration: none;
+    font-size: 15px;
+}
+
+.navigation-wrapper > .nav-link > .nav-link-left > .spark a {
+    color: white;
+    text-decoration: none;
+    font-size: 14px;
 }
