--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -2,20 +2,20 @@ body{
     margin: 0px;
 }
 
-.navigation-wrapper > .nav-link > .nav-link-left {
+/* .navigation-wrapper > .nav-link > .nav-link-left {
     display: flex;
     background-color: black;
     justify-content: space-evenly;
     align-items: flex-end;
-    /* align-items: center; */
-
+    align-items: center;
 }
 
 .navigation-wrapper > .nav-link > .nav-link-left img {
     filter: invert(100%);
-    height: 85px;
-    width: 120px;
-    margin: 0px;
+    height: 90px;
+    width: 150px;
+    display: flex;
+    justify-content: flex-start;
 }
 
 .navigation-wrapper > .nav-link > .nav-link-left > .explore {
@@ -23,36 +23,123 @@ body{
     color: yellow;
     font-size: 13px;
     align-content: center;
+    align-self: flex-start;
 }
 
-.navigation-wrapper > .nav-link > .nav-link-left > .pen a {
+.navigation-wrapper > .nav-link > .nav-link-left > .nav-tab a {
     color: white;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 19px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
-
-.navigation-wrapper > .nav-link > .nav-link-left > .project a {
-    color: white;
-    text-decoration: none;
-    font-size: 15px;
-}
-
-.navigation-wrapper > .nav-link > .nav-link-left > .collections a {
-    color: white;
-    text-decoration: none;
-    font-size: 15px;
-}
-
-.navigation-wrapper > .nav-link > .nav-link-left > .posts a {
-    color: white;
-    text-decoration: none;
-    font-size: 15px;
-}
-
 
 
 .navigation-wrapper > .nav-link > .nav-link-left > .spark a {
-    color: grey;
+    color: #929292;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 16px;
+} */
+
+.navigation-wrapper {
+    display: flex;
+    background-color: black;
+
+}
+
+.nav-left-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 30px;
+    width: 12%;
+}
+.nav-left-wrapper img {
+    height:  90px;
+    width: 150px;
+    filter: invert(100%)
+}
+
+.nav-center-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 40%;
+}
+
+.nav-center-wrapper > .explore-wrapper {
+    color: yellow;
+    display: flex;
+    font-size: 15px;
+}
+
+.tabs-wrapper {
+    display: flex;
+    align-content: center;
+}
+
+.tabs-wrapper > .nav-tab a {
+    color: white;
+    text-decoration: none;
+    padding-right: 10px;
+    font-size: 16px;
+}
+
+.tabs-wrapper > .spark a {
+    color:#949191;
+    text-decoration: none;
+    display: flex;
+    padding-left: 20px;
+}
+
+.tabs-wrapper > .spark i {
+    color: rgb(141, 141, 141);
+    text-decoration: none;
+    display: flex;
+    padding-left: 10px;
+}
+
+
+
+.nav-right-wrapper {
+display: flex;
+justify-content: flex-end;
+align-items: center;
+width: 48%;
+}
+
+.nav-right-wrapper > .btn {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 16px;
+    }
+
+.nav-right-wrapper > .btn button {
+    height: 50px;
+    width: 120px;
+    background-color: #5c5a5a;
+    color: white;
+    border-radius: 1.8px;
+    border: none;
+}
+
+.nav-right-wrapper > .btn button > .fa-angle-down {
+    color: limegreen;
+    font-size: 25px;
+    padding-left: 10px;
+}
+
+.nav-right-wrapper > .btn i {
+    font-size: 30px;
+    color: #949191;
+}
+
+button {
+    cursor: pointer;
+}
+
+i {
+    cursor: pointer;
 }
