--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -138,11 +138,15 @@ width: 48%;
     color: #949191;
 }
 
+.home-page-content-wrapper {
+    display: grid; 
+}
+
 .footer-wrapper {
     display: flex;
     justify-content: center;
     align-items: center; 
-    background-color: #5a5a5a;
+    background-color: #5f5f5f;
 }
 
 .footer {
