--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -142,6 +142,52 @@ width: 48%;
     display: grid; 
 }
 
+
+.content-container {
+    grid-area: content-container;
+}
+.image-container {
+    grid-area: image-container;
+}
+.button-container {
+    grid-area: button-container;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.button-container > .signup-btn button{
+    background-color: #70eb97;
+    border: none;
+    width: 200px;
+    height: 50px;
+    border-radius: 1.8px;
+    font-size: 1.375em;
+    font-weight: 700;
+    margin-right: 10px;
+}
+
+.button-container > .learn-more-btn button{
+    background-color: black;
+    color: white;
+    border: none;
+    width: 154px;
+    height: 43px;
+    border-radius: 1.8px;
+    font-size: 1.375em;
+    font-weight: 700;
+}
+
+.content-wrapper {
+    background-image: radial-gradient(circle at 5% 5%, grey, black);
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr;
+    grid-template-rows: auto;
+    grid-template-areas: 
+    "content-container content-container image-container "
+    "button-container button-container image-container"
+}
+
 .footer-wrapper {
     display: flex;
     justify-content: center;
@@ -167,23 +213,6 @@ width: 48%;
     padding-bottom: 10px;
 }
 
-.content-container {
-  grid-area: content-container;
-}
-.image-container {
-    grid-area: image-container;
-  }
-.button-container {
-  grid-area: button-container;
-}
-.content-wrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr 2fr;
-  grid-template-rows: auto;
-  grid-template-areas: 
-    "content-container content-container image-container "
-    "button-container button-container image-container"
-}
 
 button {
     cursor: pointer;
