placed placeholder where I wanted it now on to the text above it

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -148,6 +148,13 @@ width: 48%;
 }
 .image-container {
     grid-area: image-container;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+.placeholder {
+    height: 100%;
 }
 .button-container {
     grid-area: button-container;
