--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -145,7 +145,15 @@ width: 48%;
 
 .content-container {
     grid-area: content-container;
+    color: white;
 }
+
+.content-container > .content-Header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .image-container {
     grid-area: image-container;
     display: flex;
@@ -153,9 +161,7 @@ width: 48%;
     align-items: flex-end;
 }
 
-.placeholder {
-    height: 100%;
-}
+
 .button-container {
     grid-area: button-container;
     display: flex;
@@ -164,7 +170,7 @@ width: 48%;
 }
 
 .button-container > .signup-btn button{
-    background-color: #70eb97;
+    background-color: #6bdf90;
     border: none;
     width: 200px;
     height: 50px;
@@ -181,7 +187,7 @@ width: 48%;
     width: 154px;
     height: 43px;
     border-radius: 1.8px;
-    font-size: 1.375em;
+    font-size: 1.351em;
     font-weight: 700;
 }
 
@@ -199,7 +205,7 @@ width: 48%;
     display: flex;
     justify-content: center;
     align-items: center; 
-    background-color: #5f5f5f;
+    background-color: #535353;
 }
 
 .footer {
